[gd_scene load_steps=2 format=3 uid="uid://cuc2ctua7ggmd"]

[ext_resource type="Script" uid="uid://mdoylrcmy5u" path="res://assets/ui/modifiercard/modifiercard.gd" id="1_kjwcd"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 171.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjwcd")

[node name="border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.34816468, 0.53390443, 0.634156, 1)

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.73377293, 0.7233876, 0.79716635, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TopLeft" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 55
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
alignment = 2

[node name="BottomRight" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 55
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer"]
custom_minimum_size = Vector2(40, 120)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "[rainbow]![/rainbow]"
fit_content = true
scroll_active = false

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_selected"]
